force-app/main/default/objects/EntityHistory__c/EntityHistory__c.object-meta.xml
<CustomObject>
    <label>Entity History</label>
    <nameField>
        <displayFormat>{YYYY}/{MM}/{DD}-{0}</displayFormat>
        <label>Entity History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entity Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>