force-app/main/default/objects/EntityHistory__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Entity Histories</relationshipLabel>
    <relationshipName>Entity_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>