force-app/main/default/objects/EntityHistory__c/fields/ObjectId__c.field-meta.xml
<CustomField>
    <fullName>ObjectId__c</fullName>
    <label>Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>