force-app/main/default/objects/EntityHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RecordLink__c</columns>
    <columns>ObjectName__c</columns>
    <columns>FieldName__c</columns>
    <columns>NewValue__c</columns>
    <columns>OldValue__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>