force-app/main/default/objects/EntityHistory__c/listViews/Animal.listView-meta.xml
<ListView>
    <fullName>Animal</fullName>
    <columns>RecordLink__c</columns>
    <columns>ObjectName__c</columns>
    <columns>FieldName__c</columns>
    <columns>NewValue__c</columns>
    <columns>OldValue__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ObjectName__c</field>
        <operation>equals</operation>
        <value>Animal</value>
    </filters>
    <label>Animal</label>
</ListView>