force-app/main/default/objects/EntityHistory__c/listViews/Behavior_Evaluation.listView-meta.xml
<ListView>
    <fullName>Behavior_Evaluation</fullName>
    <columns>RecordLink__c</columns>
    <columns>ObjectName__c</columns>
    <columns>FieldName__c</columns>
    <columns>NewValue__c</columns>
    <columns>OldValue__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ObjectName__c</field>
        <operation>equals</operation>
        <value>Behavior Evaluation</value>
    </filters>
    <label>Behavior Evaluation</label>
</ListView>